--- a/Code/Engine/Engine.vcxproj.filters
+++ b/Code/Engine/Engine.vcxproj.filters
@@ -23,6 +23,24 @@
     <ClCompile Include="Util\HighResTime.cpp">
       <Filter>Util</Filter>
     </ClCompile>
+    <ClCompile Include="WorldSystem.cpp">
+      <Filter>WorldSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Util\BitArray.cpp">
+      <Filter>Util\MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="Util\MemoryPool.cpp">
+      <Filter>Util\MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="Util\Actor.cpp">
+      <Filter>Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="Util\Matrix4x4.cpp">
+      <Filter>Util\Matrix4X4</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicsObjects.cpp">
+      <Filter>GraphicsSystem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PreCompiled.h" />
@@ -50,6 +68,33 @@
     <ClInclude Include="Util\SharedPointer.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="WorldSystem.h">
+      <Filter>WorldSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\BitArray.h">
+      <Filter>Util\MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\MemoryPool.h">
+      <Filter>Util\MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Actor.h">
+      <Filter>Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\ActorController.h">
+      <Filter>Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Matrix4x4.h">
+      <Filter>Util\Matrix4X4</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Vector4.h">
+      <Filter>Util\Matrix4X4</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicsObjects.h">
+      <Filter>GraphicsSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshData.h">
+      <Filter>GraphicsSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GraphicsSystem">
@@ -64,6 +109,18 @@
     <Filter Include="Util\Debug">
       <UniqueIdentifier>{434c9b6c-8ee7-4816-b0ab-3838a640c9c9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="WorldSystem">
+      <UniqueIdentifier>{aa373415-3016-457a-bb29-6bd0ca2707f6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Util\MemoryManagement">
+      <UniqueIdentifier>{d2b48398-c772-4b13-a2e2-b28982503c08}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor">
+      <UniqueIdentifier>{d7fbf397-5730-414f-ab03-eb597fa3c745}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Util\Matrix4X4">
+      <UniqueIdentifier>{59011d2c-7636-4444-8729-b81fbb9bdfe3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="Util\Vector3.inl">
@@ -74,6 +131,9 @@
     </None>
     <None Include="Util\SharedPointer.inl">
       <Filter>Util</Filter>
+    </None>
+    <None Include="Util\Vector4.inl">
+      <Filter>Util\Matrix4X4</Filter>
     </None>
   </ItemGroup>
 </Project>
