--- a/Code/Engine/Engine.vcxproj
+++ b/Code/Engine/Engine.vcxproj
@@ -11,9 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GraphicsObjects.cpp" />
+    <ClCompile Include="RenderableObjectSystem.cpp" />
     <ClCompile Include="GraphicsSystem.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PreCompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -32,9 +33,10 @@
     <ClCompile Include="WorldSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GraphicsObjects.h" />
+    <ClInclude Include="RenderableObjectSystem.h" />
     <ClInclude Include="GraphicsSystem.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshData.h" />
     <ClInclude Include="PreCompiled.h" />
     <ClInclude Include="Util\Actor.h" />
