Added debug for Directx and shaders, Modified the materialconstant data to be even more generic so that it handles D3DXVector4

--- a/Code/Engine/Engine.vcxproj.filters
+++ b/Code/Engine/Engine.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="Util\UserInput.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="MaterialConstantData.h">
+      <Filter>GraphicsSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GraphicsSystem">
