--- a/Code/Game/Game.vcxproj
+++ b/Code/Game/Game.vcxproj
@@ -108,6 +108,7 @@
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CameraController.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Resources\Resource.h" />
@@ -116,6 +117,7 @@
     <ClInclude Include="Win32Management.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CameraController.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="PreCompiled.cpp">
