--- a/Code/Game/Game.vcxproj.filters
+++ b/Code/Game/Game.vcxproj.filters
@@ -22,6 +22,7 @@
     </ClInclude>
     <ClInclude Include="PreCompiled.h" />
     <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="CameraController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
@@ -30,6 +31,7 @@
     </ClCompile>
     <ClCompile Include="PreCompiled.cpp" />
     <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="CameraController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources\Game.rc">
