Added Fragment and VertexShader builder, modified buildAssets.lua and AssetBuilder.cpp to handle AssetToBuild.lua file

--- a/Code/Tools/VertexShaderBuilder/VertexShaderBuilder.vcxproj
+++ b/Code/Tools/VertexShaderBuilder/VertexShaderBuilder.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{45D1188E-7602-4EF5-A320-AC10104B5BE6}</ProjectGuid>
+    <ProjectGuid>{03D23A2A-505F-469A-9658-C7664D498C00}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BuildAssets</RootNamespace>
+    <RootNamespace>VertexShaderBuilder</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -55,26 +55,13 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;EAE2014_GRAPHICS_SHOULDDEBUGSHADERSBEUSED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>BuilderHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <CustomBuild />
-    <CustomBuild />
-    <CustomBuild />
-    <CustomBuildStep>
-      <Command>"$(BinDir)AssetBuilder.exe" "$(ScriptDir)AssetsToBuild.lua"</Command>
-    </CustomBuildStep>
-    <CustomBuildStep>
-      <Message>Building Assets</Message>
-    </CustomBuildStep>
-    <CustomBuildStep>
-      <Outputs>__ALWAYS_RUN__</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -85,29 +72,21 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>BuilderHelper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <CustomBuild />
-    <CustomBuild />
-    <CustomBuild />
-    <CustomBuildStep>
-      <Command>"$(BinDir)AssetBuilder.exe" "$(ScriptDir)AssetsToBuild.lua"</Command>
-    </CustomBuildStep>
-    <CustomBuildStep>
-      <Message>Building Assets</Message>
-    </CustomBuildStep>
-    <CustomBuildStep>
-      <Outputs>__ALWAYS_RUN__</Outputs>
-    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cVertexShaderBuilder.cpp" />
+    <ClCompile Include="EntryPoint.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cVertexShaderBuilder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
