Enhanced meshbuilder to better output invalid mesh files, added usersettings and parsing, added fullscreen check, fixed bugs in MayaExporter

--- a/Code/Game/Game.vcxproj
+++ b/Code/Game/Game.vcxproj
@@ -61,7 +61,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>UserSettings.lib;Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>copy "$(TargetPath)" "$(GameDir)$(TargetFileName)" /y</Command>
