--- a/Code/Tools/UserSettings/UserSettings.vcxproj.filters
+++ b/Code/Tools/UserSettings/UserSettings.vcxproj.filters
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <None Include="settings.ini" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="UserSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserSettings.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="settings.ini" />
   </ItemGroup>
 </Project>
