Added Custom Pix Events in debug build, added AntiAliasing toggle in settings.ini, Fixed a bug with per-material constant, added default missing texture

--- a/Code/Tools/UserSettings/settings.ini
+++ b/Code/Tools/UserSettings/settings.ini
@@ -8,3 +8,6 @@ height = 600
 
 -- Set this to false to run the game in a window
 fullscreen = false
+
+-- Set this to true to enable antialiasing
+antialiasing = true
