--- a/Code/Engine/Engine.vcxproj
+++ b/Code/Engine/Engine.vcxproj
@@ -113,7 +113,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_ENABLE_DEBUG_LOGS;EAE2014_SHOULDALLRETURNVALUESBECHECKED;EAE2014_GRAPHICS_SHOULDD3DDEBUGINFOBEENABLED;EAE2014_GRAPHICS_SHOULDDEBUGSHADERSBEUSED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_ENABLE_DEBUG_LOGS;EAE2014_SHOULDALLRETURNVALUESBECHECKED;EAE2014_GRAPHICS_SHOULDD3DDEBUGINFOBEENABLED;EAE2014_GRAPHICS_SHOULDDEBUGSHADERSBEUSED;EAE2014_GRAPHICS_AREPIXEVENTSENABLED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>PreCompiled.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(DXSDK_DIR)Include\;$(EngineDir)Util;$(EngineDir)</AdditionalIncludeDirectories>
     </ClCompile>
