Fixed dependency of UserSettings after move in game folder

--- a/Code/Game/UserSettings/UserSettings.vcxproj
+++ b/Code/Game/UserSettings/UserSettings.vcxproj
@@ -76,7 +76,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Lualib.lib</AdditionalDependencies>
+      <AdditionalDependencies>LuaLib.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -96,7 +96,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalDependencies>Lualib.lib</AdditionalDependencies>
+      <AdditionalDependencies>LuaLib.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
