Improved the validation of screen height and screen width

--- a/Code/Game/UserSettings/UserSettings.vcxproj
+++ b/Code/Game/UserSettings/UserSettings.vcxproj
@@ -16,6 +16,9 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">copy "$(ProjectDir)settings.ini" "$(GameDir)settings.ini" /y</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Copying User Settings file</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(GameDir)settings.ini</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">copy "$(ProjectDir)settings.ini" "$(GameDir)settings.ini" /y</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Copying User Settings file</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(GameDir)settings.ini</Outputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
